<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000">

    <FrameLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_ten"
            android:background="@drawable/dialog_bg"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_twenty"
            android:paddingRight="@dimen/dp_twenty"
            android:paddingTop="@dimen/dp_forty">

            <EditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_forty"
                android:background="@drawable/edit_bg"
                android:hint="@string/register_phone_hint"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/text_drark_gray"
                android:textColorHint="@color/text_drark_gray"
                android:textSize="@dimen/sp_fourteen" />

            <EditText
                android:id="@+id/register_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_forty"
                android:background="@drawable/edit_bg"
                android:hint="@string/register_pwd_hint"
                android:inputType="textPassword"
                android:maxLength="18"
                android:textColor="@color/text_drark_gray"
                android:textColorHint="@color/text_drark_gray"
                android:textSize="@dimen/sp_fourteen" />

            <EditText
                android:id="@+id/register_repwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_forty"
                android:background="@drawable/edit_bg"
                android:hint="@string/register_repwd_hint"
                android:inputType="textPassword"
                android:maxLength="18"
                android:textColor="@color/text_drark_gray"
                android:textColorHint="@color/text_drark_gray"
                android:textSize="@dimen/sp_fourteen" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_thirty"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/register_family_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_forty"
                    android:background="@drawable/edit_bg"
                    android:layout_weight="1"
                    android:hint="@string/register_family_name"
                    android:singleLine="true"
                    android:textColor="@color/text_drark_gray"
                    android:textColorHint="@color/text_drark_gray"
                    android:textSize="@dimen/sp_fourteen" />

                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_forty"
                    android:background="@drawable/edit_bg"
                    android:layout_marginLeft="@dimen/dp_ten"
                    android:layout_weight="1.5"
                    android:hint="@string/register_name"
                    android:singleLine="true"
                    android:textColor="@color/text_drark_gray"
                    android:textColorHint="@color/text_drark_gray"
                    android:textSize="@dimen/sp_fourteen" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/register_birthday_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.5"
                    android:layout_marginTop="@dimen/dp_five"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/register_birthday_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/sp_fourteen" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/register_drop" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_sex_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_five"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/register_sex_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_black"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/sp_fourteen" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/register_drop" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="@dimen/dp_hundred_twenty"
                android:layout_height="@dimen/dp_thirty_three"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_ten"
                android:layout_marginTop="@dimen/dp_ten"
                android:background="@drawable/btn_blue_bg"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_fourteen" />
        </LinearLayout>

        <ImageView
            android:id="@+id/register_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@mipmap/close_gray" />

    </FrameLayout>
</FrameLayout>
